# kattis

./: README.md
abstract_art/: CMakeLists.txt  Point.cpp  Point.h  Polygon.cpp  Polygon.h  main.cpp
sequences/: CMakeLists.txt  inversions.cpp  inversions.h  inversions_test.cpp  main.cpp
